[tool.poetry]
name = "yaml-utils"
version = "0.1.0"
description = ""
authors = ["Max Pershin <mepershin@gmail.com>"]
readme = "README.md"
packages = [{include = "yaml_utils"}]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
